--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-      
     "skipLibCheck": true,
     
     "baseUrl": ".",
@@ -20,6 +19,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    
+    "noEmitOnError": false,
     "jsx": "react-jsx",
 
     /* Linting */
